MAPREDUCE-7341. ResilientCommitByRename
Manifest committer uses the resilient commit operation if present.

Tests verifies that rename returning false is uprated to an IOE, and
if the source is missing, FNFE.

On ABFS, operations go through the new resilient commit API

Change-Id: I14fd5beec7e60efb100f364fbfb439b10d6d005e